RESOLVED FIXED158005
REGRESSION (196374): deleting a global property is expensive
https://bugs.webkit.org/show_bug.cgi?id=158005
Summary REGRESSION (196374): deleting a global property is expensive
Geoffrey Garen
Reported 2016-05-23 16:43:55 PDT
REGRESSION (196374): deleting a global property is expensive
Attachments
Patch (1.75 KB, patch)
2016-05-23 16:53 PDT, Geoffrey Garen
no flags
Geoffrey Garen
Comment 1 2016-05-23 16:53:04 PDT
Chris Dumez
Comment 2 2016-05-23 18:31:43 PDT
Comment on attachment 279607 [details] Patch r=me
Geoffrey Garen
Comment 3 2016-05-23 20:04:53 PDT
Comment on attachment 279607 [details] Patch cq+
WebKit Commit Bot
Comment 4 2016-05-23 20:26:38 PDT
Comment on attachment 279607 [details] Patch Clearing flags on attachment: 279607 Committed r201315: <http://trac.webkit.org/changeset/201315>
WebKit Commit Bot
Comment 5 2016-05-23 20:26:43 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.