REGRESSION (196374): deleting a global property is expensive https://bugs.webkit.org/show_bug.cgi?id=158005

Reviewed by Chris Dumez.

* runtime/JSObject.cpp:
(JSC::JSObject::deleteProperty): We only need to reify static properties
if the name being deleted matches a static property. Otherwise, we can
be sure that delete won't observe any static properties.


Canonical link: https://commits.webkit.org/176131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201315 268f45cc-cd09-0410-ab3c-d52691b4dbfc